Compilation lauch.sh